# datapath

./: CMakeLists.txt  Doxyfile  README.md  plan.txt
cmake/: config.hpp.in  version.hpp.in
include/: bitmask.hpp  datapath.hpp  error.hpp  event.hpp  iserver.hpp  isocket.hpp  itask.hpp  permissions.hpp  threadpool.hpp  waitable.hpp
include/datapath/: datapath.hpp  error.hpp  event.hpp  server.hpp  socket.hpp
samples/: CMakeLists.txt
samples/benchmark/: CMakeLists.txt  main.cpp  measurer.cpp  measurer.hpp
samples/single-process-ipc/: CMakeLists.txt  main.cpp
source/: datapath.cpp  threadpool.cpp
source/windows/: datapath.cpp  overlapped-queue.cpp  overlapped-queue.hpp  overlapped.cpp  overlapped.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  task.cpp  task.hpp  utility.hpp  waitable.cpp  windows-client-socket.cpp  windows-client-socket.hpp  windows-overlapped.cpp  windows-overlapped.hpp  windows-server-socket.cpp  windows-server-socket.hpp  windows-server.cpp  windows-server.hpp  windows-socket.cpp  windows-socket.hpp  windows-task.cpp  windows-task.hpp  windows-utility.hpp
